<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_name"
        android:imeOptions="actionDone"/>


    <EditText
        android:id="@+id/add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_date" />

    <EditText
        android:id="@+id/add_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="date"
        android:selectAllOnFocus="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_charge" />

    <EditText
        android:id="@+id/add_charge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_comment" />

    <EditText
        android:id="@+id/add_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true"
        android:singleLine="false" />

    <Button
        android:id="@+id/add_subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_subscription" />

    <TextView
        android:id="@+id/invalid_format1"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_weight="1"
        android:paddingTop="4dp"
        android:textAlignment="center"
        android:textColor="?attr/colorError"
        android:textSize="18sp"
        android:visibility="invisible" />

</LinearLayout>
